--- a/application/layouts/scripts/main.phtml
+++ b/application/layouts/scripts/main.phtml
@@ -29,7 +29,14 @@
     
     <div id="contentWrap" class="clearfix">
         <div class="left categorylist">
-            <?= $this->layout()->categoryMain; ?>
+            <div class="sub-nav">
+            <h3>select <span>category</span></h3>
+                <ul>
+                    <? foreach ($this->Category() as $category): ?>
+                    <li><a href="<?=$this->url(array('categoryIdent' => $category->ident), 'catalog_category', true );?>"><?=$category->name; ?></a></li>
+                    <? endforeach; ?>
+                </ul>
+            </div>
             <? if (0 < count($this->subCategories)):?>
             <div class="sub-nav">
             <h3>in this <span>category</span></h3>
