--- a/trunk/application/modules/storefront/views/scripts/catalog/list.phtml
+++ b/trunk/application/modules/storefront/views/scripts/catalog/list.phtml
@@ -5,6 +5,8 @@
 <p>
     <a href="<?=$this->url(array('controller' => 'catalog', 'action' => 'addcategory'), 'admin', true)?>">Add Category</a>
     <a href="<?=$this->url(array('controller' => 'catalog', 'action' => 'addproduct'), 'admin', true)?>">Add Product</a>
+    <a href="<?=$this->url(array('controller' => 'catalog', 'action' => 'reindex'), 'admin', true)?>">Re-Index Products</a>
+    <a href="<?=$this->url(array('controller' => 'catalog', 'action' => 'optimizeindex'), 'admin', true)?>">Optimize Index</a>
 </p>
 <table class="datatable">
     <thead>
